--- a/bmi-calc.html
+++ b/bmi-calc.html
@@ -1,7 +1,7 @@
 ﻿<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Git講座2回目の2</title>
+    <title>TEST</title>
     <script type="text/javascript" src="bmi-calc.js"></script>
 </head>
 
